Bug 487934 - Kwave crashes upon startup
Summary: Kwave crashes upon startup
Status: RESOLVED FIXED
Alias: None
Product: kwave
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Thomas Eschenbacher
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-06-02 18:51 UTC by Mahbod Karamoozian
Modified: 2025-02-11 00:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mahbod Karamoozian 2024-06-02 18:51:14 UTC
Application: kwave (24.07.70)

Qt Version: 6.7.1
Frameworks Version: 6.2.0
Operating System: Linux 6.9.2-arch1-1 x86_64
Windowing System: X11
Distribution: "Arch Linux"
DrKonqi: 6.0.5 [KCrashBackend]

-- Information about the crash:
it just crashes, here are the logs (application and debug symbols were compiled with an aur helper and the system has been updated to the latest version):

This is kwave v24.07.70 (compiled with KDE Frameworks 5.116.0)

Benchmarking memcpy methods (smaller is better):
19 -- exe=/usr/bin/kwave
13 -- platform=xcb
11 -- display=:0
14 -- appname=kwave
17 -- apppath=/usr/bin
10 -- signal=11
10 -- pid=17696
20 -- appversion=24.07.70
18 -- programname=Kwave
38 -- bugaddress=Thomas.Eschenbacher@gmx.de
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kwave path = /usr/bin pid = 17696
KCrash: Arguments: /usr/bin/kwave 
KCrash: Attempting to start /usr/lib/drkonqi

The crash can be reproduced every time.

-- Backtrace:
Application: Kwave (kwave), signal: Segmentation fault

[KCrash Handler]
#4  0x0000714f7db96269 in probe_fast_memcpy () at /usr/src/debug/kwave-git/kwave/libkwave/memcpy.c:678
#5  0x000057087cd6e8f4 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kwave-git/kwave/kwave/main.cpp:234
[Inferior 1 (process 17696) detached]

Reported using DrKonqi
Comment 1 Antonio Rojas 2024-06-03 12:00:25 UTC
Caused by GCC 14
Disabling -fno-omit-frame-pointer fixes this as per https://bugzilla.redhat.com/show_bug.cgi?id=2265381
Comment 2 Bug Janitor Service 2025-02-09 23:55:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kwave/-/merge_requests/59
Comment 3 Mark Penner 2025-02-11 00:28:36 UTC
Git commit fbff057976e8988e01de0430705a8c75573bcd29 by Mark Penner.
Committed on 11/02/2025 at 00:23.
Pushed by mrp into branch 'master'.

use standard memcpy

the old custom memcpy implementations don't compile correctly with some compilers
and are not usually faster than the modern standard memcpy anyway
Related: bug 499512

M  +1    -4    .flatpak-manifest.json
M  +0    -6    AUTHORS
M  +0    -40   CMakeLists.txt
M  +0    -3    LICENSES
M  +0    -15   config.h.cmake
M  +0    -7    doc/devel.docbook
M  +0    -14   doc/en/index.docbook
M  +0    -1    doxy.cfg.in
M  +0    -11   kwave/main.cpp
M  +0    -37   libkwave/CMakeLists.txt
M  +0    -1    libkwave/MultiPlaybackSink.cpp
M  +0    -1    libkwave/TrackWriter.cpp
D  +0    -429  libkwave/cpu_accel.cpp
D  +0    -53   libkwave/cputest.h
D  +0    -702  libkwave/memcpy.c
M  +0    -14   libkwave/memcpy.h

https://invent.kde.org/multimedia/kwave/-/commit/fbff057976e8988e01de0430705a8c75573bcd29