use standard memcpy

the old custom memcpy implementations don't compile correctly with some compilers
and are not usually faster than the modern standard memcpy anyway

BUG: 487934
BUG: 499512