libkwave/TrackWriter.cpp
@@ -23,7 +23,6 @@
 #include "libkwave/Track.h"
 #include "libkwave/TrackWriter.h"
 #include "libkwave/Utils.h"
-#include "libkwave/memcpy.h"
 
 /** minimum time between emitting the "progress()" signal [ms] */
 #define MIN_PROGRESS_INTERVAL 100
