config.h.cmake
@@ -15,21 +15,6 @@
  *                                                                         *
  ***************************************************************************/
 
-/* use ppc target optimizations (from xine) */
-#cmakedefine ARCH_PPC
-
-/* use ix86 target optimizations (from xine) */
-#cmakedefine ARCH_X86
-
-/* use X86_64 target optimizations (from xine) */
-#cmakedefine ARCH_X86_64
-
-/* use target optimized memcpy */
-#cmakedefine WITH_OPTIMIZED_MEMCPY
-
-/* use target optimized memcpy using AVX assembler code */
-#cmakedefine HAVE_AVX
-
 /* support playback/recording via ALSA */
 #cmakedefine HAVE_ALSA_SUPPORT
 
